--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <form action='/forms/enviar' method='POST'>
-        Nombre: <input name="nombre">
+        Nombre: <input type='text'name="nombre">
         <input type="submit" value="enviar">
       </form>
   </body>
